--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -24,8 +24,8 @@ $enable-box-sizing-border-box: true;
 //
 // ===========================================================================
 
-// $color-white: var(--color-default-white);
-// $color-black: var(--color-default-black);
+$color-white: #ffffff;
+$color-black: #1e1e20;
 // $color-gray: var(--color-default-gray);
 
 // $color-1: var(--color-palette-1);
