text styles for header links

--- a/src/styles/base/global.scss
+++ b/src/styles/base/global.scss
@@ -9,6 +9,7 @@
 
 html {
   background-color: white;
+  font-family: Helvetica, sans-serif;
   overflow-y: scroll; /* [1] */
   min-height: 100%; /* [2] */
   -webkit-overflow-scrolling: touch; /* [3] */
