--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -9,8 +9,10 @@
 // Base
 @import 'base/index';
 
-// Layout
-@import 'layout/index';
-
 // Shame
 // @import 'base/shame';
+
+// Components
+@import 'components/button';
+@import 'components/header';
+@import 'components/hero';
