--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -2,6 +2,8 @@
   align-items: center;
   display: flex;
   justify-content: space-between;
+  margin: 0 auto;
+  max-width: 1440px;
   padding: 20px 80px;
 }
 
