--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -16,3 +16,5 @@
 @import 'components/button';
 @import 'components/header';
 @import 'components/hero';
+@import 'components/product-listing';
+@import 'components/product-tile';
