complete variant selection and cart page

--- a/src/styles/globals/button.scss
+++ b/src/styles/globals/button.scss
@@ -3,6 +3,7 @@
   background-color: $color-black;
   border: 2px solid $color-black;
   color: $color-white;
+  cursor: pointer;
   display: inline-flex;
   font-size: 13px;
   font-weight: bold;
