--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -52,7 +52,7 @@
 
     <a href="#MainContent" class="in-page-link u-visually-hidden">Skip to content</a>
 
-    {% comment %}header{% endcomment %}
+    {% include 'header' %}
 
     <main role="main" class="oo-main" id="MainContent">
 
