--- a/src/snippets/icons/icon-search.liquid
+++ b/src/snippets/icons/icon-search.liquid
@@ -1,3 +1,17 @@
-<svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
-    <path d="M13.787 12.752l-3.451-3.466a5.519 5.519 0 0 0 1.373-3.634C11.71 2.536 9.083 0 5.855 0 2.626 0 0 2.536 0 5.652c0 3.117 2.626 5.653 5.855 5.653a5.936 5.936 0 0 0 3.354-1.023l3.477 3.492c.146.146.341.226.55.226a.774.774 0 0 0 .53-.206.72.72 0 0 0 .021-1.042zM5.855 1.475c2.386 0 4.327 1.874 4.327 4.177 0 2.304-1.941 4.178-4.327 4.178S1.527 7.956 1.527 5.652c0-2.303 1.942-4.177 4.328-4.177z"></path>
-  </svg>
+<?xml version="1.0" encoding="UTF-8"?>
+<svg width="15px" height="15px" viewBox="0 0 15 15" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="{{ classes }}">
+    <!-- Generator: sketchtool 55.2 (78181) - https://sketchapp.com -->
+    <title>{{ title }}</title>
+    <g id="SxDxJ" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <g id="1.-SxDxJ_Homepage_Basic" transform="translate(-1287.000000, -38.000000)" fill="#000000">
+            <g id="Header">
+                <g id="BG">
+                    <g id="Search" transform="translate(1287.000000, 38.000000)">
+                        <path d="M5.89285714,11.7857143 C2.63832201,11.7857143 -2.93098879e-14,9.14739228 -2.93098879e-14,5.89285714 C-2.93098879e-14,2.63832201 2.63832201,-2.93098879e-14 5.89285714,-2.93098879e-14 C9.14739228,-2.93098879e-14 11.7857143,2.63832201 11.7857143,5.89285714 C11.7817785,9.14576064 9.14576064,11.7817785 5.89285714,11.7857143 Z M5.89285714,1.07142857 C3.23005567,1.07142857 1.07142857,3.23005567 1.07142857,5.89285714 C1.07142857,8.55565862 3.23005567,10.7142857 5.89285714,10.7142857 C8.55565862,10.7142857 10.7142857,8.55565862 10.7142857,5.89285714 C10.710352,3.23168678 8.5540275,1.07536231 5.89285714,1.07142857 Z" id="Shape" fill-rule="nonzero"></path>
+                        <polygon id="Rectangle" transform="translate(11.714286, 12.032143) rotate(-45.000000) translate(-11.714286, -12.032143) " points="11 9 12.4285714 9 12.4285714 15.0642857 11 15.0642857"></polygon>
+                    </g>
+                </g>
+            </g>
+        </g>
+    </g>
+</svg>
