--- a/src/styles/base/images.scss
+++ b/src/styles/base/images.scss
@@ -12,7 +12,7 @@
 
 img {
   // max-width: 100%; /* [1] */
-  width: 100%;
+  max-width: 100%;
   font-style: italic; /* [2] */
   vertical-align: middle; /* [3] */
 }
