--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -37,6 +37,10 @@ $enable-box-sizing-border-box: true;
 // $color-body-text: var(--color-body-text);
 // $color-body-background: var(--color-body-background);
 
+$color-white: #ffffff;
+
+$primary-color: #1E1E20; 
+
 // =========================================================================
 //  ______   ______     __   __     ______   ______
 // /\  ___\ /\  __ \   /\ "-.\ \   /\__  _\ /\  ___\
