--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -9,5 +9,12 @@
 // Base
 @import 'base/index';
 
+// Components
+@import 'components/button';
+@import 'components/header';
+@import 'components/nav';
+@import 'components/product-tile';
+@import 'components/utility-nav';
+
 // Shame
 // @import 'base/shame';
