--- a/src/templates/product.liquid
+++ b/src/templates/product.liquid
@@ -1,1 +1,36 @@
-{% comment %}product{% endcomment %}
+{% assign parent_collection = product.collections | first %}
+
+<div class="product">
+  <div class="product__cell">
+    <img
+      src="{{ product | img_url: '720x', scale: 2 }}"
+      srcset="{{ product | img_url: '720x', scale: 2 }} 2x, {{ product | img_url: '720x' }}"
+      alt="{{ product.featured_image.alt }}"
+      class="product__image"
+    />
+  </div>
+  <div class="product__cell product__cell--info">
+    <div class="product__summary">
+      <p class="product__category">{{ parent_collection.title }}</p>
+      <h1 class="product__title">{{ product.title }}</h1>
+      <p class="product__price">{{ product.price | money_without_trailing_zeros }}</p>
+    </div>
+    <div class="product__description">{{ product.description }}</div>
+    <div class="product__add-to-cart">
+      {% form 'product', product %}
+        <div class="product__options">
+          <p class="product__option-value">
+            <strong>Size:</strong>
+            <span id="product-option-value-placeholder">{{ product.first_available_variant.option1 }}</span>
+          </p>
+          <select class="product__option-select" name="id" id="product-option-value">
+            {% for variant in product.variants %}
+              <option value="{{ variant.id }}">{{ variant.title }}</option>
+            {% endfor %}
+          </select>
+        </div>
+        <button type="submit" class="product__add-to-cart-button button button--full-width">Add To Cart - {{ product.price | money_without_trailing_zeros }}</button>
+      {% endform %}
+    </div>
+  </div>
+</div>
