refactor: all base styles

--- a/src/styles/base/elements.scss
+++ b/src/styles/base/elements.scss
@@ -1,18 +1,7 @@
-/* ==========================================================================
-   # TABLES
-   ========================================================================== */
-
-/**
- * 1. Ensure tables fill up as much space as possible.
- */
-
+// Ensure tables fill up as much space as possible.
 table {
-  width: 100%; /* [1] */
+  width: 100%;
 }
-
-/* ==========================================================================
-   # OTHER
-   ========================================================================== */
 
 i {
   font-style: normal;
