--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -1,20 +1,17 @@
-/**
- *
- * 1. Set the default `font-size` and `line-height` for the entire project,
- *    sourced from our default variables. The `font-size` is calculated to exist
- *    in ems, the `line-height` is calculated to exist unitlessly.
- * 2. Force scrollbars to always be visible to prevent awkward ‘jumps’ when
- *    navigating between pages that do/do not have enough content to produce
- *    scrollbars naturally.
- * 5. https://davidwalsh.name/font-smoothing
- */
+// 1. Set the default `font-size` and `line-height` for the entire project,
+// sourced from our default variables. The `font-size` is calculated to exist
+// in ems, the `line-height` is calculated to exist unitlessly.
+// 2. Force scrollbars to always be visible to prevent awkward ‘jumps’ when
+// navigating between pages that do/do not have enough content to produce
+// scrollbars naturally.
+// 5. https://davidwalsh.name/font-smoothing
 
 html {
   font-size: 100%;
 }
 
 body {
-  // font-size: $font-size-base; /* [1] */
+  // font-size: $font-size-bxase; /* [1] */
   // line-height: $font-line-height; /* [1] */
   // font-family: $font-primary;
   // color: $color-body-text;
