--- a/src/styles/helpers/functions.scss
+++ b/src/styles/helpers/functions.scss
@@ -1,11 +1,8 @@
-/**
- *  rem($value)
- *
- *  Function to quickly convert px value to rem
- *
- *  $value - A number with px unit
- *
- */
+// rem($value)
+//
+// Function to quickly convert px value to rem
+//
+// $value - A number with px unit
 
 // @function rem($value) {
 //   @if (type-of($value) == number) {
@@ -19,22 +16,21 @@
 //   @return $value / $oo-size-base * 1rem;
 // }
 
-/**
- *  Round a number to specified digits.
- *
- *  @param  {Number} $number A number to round
- *  @param  {Number} [$digits:0] Digits to output
- *  @param  {String} [$mode:round] (round|ceil|floor) How to round a number
- *  @return {Number} A rounded number
- *  @example
- *      decimal-round(0.333)    => 0
- *      decimal-round(0.333, 1) => 0.3
- *      decimal-round(0.333, 2) => 0.33
- *      decimal-round(0.666)    => 1
- *      decimal-round(0.666, 1) => 0.7
- *      decimal-round(0.666, 2) => 0.67
- *
- */
+// Round a number to specified digits.
+//
+// @param  {Number} $number A number to round
+// @param  {Number} [$digits:0] Digits to output
+// @param  {String} [$mode:round] (round|ceil|floor) How to round a number
+//
+// @return {Number} A rounded number
+//
+// @example
+//     decimal-round(0.333)    => 0
+//     decimal-round(0.333, 1) => 0.3
+//     decimal-round(0.333, 2) => 0.33
+//     decimal-round(0.666)    => 1
+//     decimal-round(0.666, 1) => 0.7
+//     decimal-round(0.666, 2) => 0.67
 
 // @function decimal-round($number, $digits: 0, $mode: round) {
 //   $n: 1;
