--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -22,6 +22,12 @@ $space-xl: 60px;
 $space-2xl: 90px;
 $space-3xl: 120px;
 
+$color-grey-darker: #4a4a4a;
+$color-grey-dark: #888;
+$color-grey: #979797;
+$color-grey-light: #bbb;
+$color-grey-lighter: #eee;
+
 // $named-widths: (
 //   1: full,
 //   0.5: half,
