refactor: header component

--- a/src/styles/sections/header.scss
+++ b/src/styles/sections/header.scss
@@ -1,2 +1,7 @@
 @import '../components/promobar';
+@import '../components/header-hamburger';
+@import '../components/header-navbar';
+@import '../components/header-logo';
 @import '../components/header-nav-list';
+@import '../components/header-search';
+@import '../components/header-cart-button';
