--- a/src/snippets/components/header-hamburger.liquid
+++ b/src/snippets/components/header-hamburger.liquid
@@ -1,3 +1,6 @@
-<div class="header-hamburger">
+<div
+  class="header-hamburger"
+  data-header-hamburger
+>
   {% include 'icon-hamburger' %}
 </div>
