--- a/src/styles/components/header-nav-list.scss
+++ b/src/styles/components/header-nav-list.scss
@@ -52,9 +52,21 @@
 .header-nav-list__container {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
+  max-height: 0;
+  opacity: 0.01;
+  transition: max-height 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94), 
+              opacity 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
 
   @include mq('large') {
     flex-direction: row;
+    max-height: initial;
+    opacity: 1;
+  }
+
+  &.is-expanded {
+    max-height: 475px;
+    opacity: 1;
   }
 }
 
