--- a/src/styles/components/header-navbar.scss
+++ b/src/styles/components/header-navbar.scss
@@ -3,6 +3,8 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  overflow: hidden;
+  transition: height 500ms ease-in-out;
 
   @include mq('large') {
     display: none;
