--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -77,5 +77,7 @@
     {%- comment -%}
       {% section 'footer' %}
     {%- endcomment -%}
+
+    {% include 'external-scripts' %}
   </body>
 </html>
