--- a/src/styles/sections/slider.scss
+++ b/src/styles/sections/slider.scss
@@ -1,4 +1,4 @@
-.hero-slider__slide{
+.slider__slide{
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,7 +10,7 @@
   }
 }
 
-.hero-slider__slide-title {
+.slider__slide-title {
   padding: 15px;
   background: rgba(255, 255, 255, 0.75);
 }
