--- a/src/styles/templates/index/index.scss
+++ b/src/styles/templates/index/index.scss
@@ -6,4 +6,4 @@
 @import "../../vendor/slick/slick-theme.scss";
 
 // Sections
-@import '../../sections/hero-slider';
+@import '../../sections/slider';
