feat: update Sass variables

--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -28,6 +28,8 @@ $color-grey: #979797;
 $color-grey-light: #bbb;
 $color-grey-lighter: #eee;
 
+$color-body-text: #222;
+
 // $named-widths: (
 //   1: full,
 //   0.5: half,
