feat: update base header  styles

--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -24,9 +24,8 @@ h4,
 h5,
 h6 {
   // font-family: $font-heading;
-  margin: 0;
-  // margin-bottom: $oo-base-spacing-size;
-  // color: $color-body-text;
+  margin-bottom: $space-md;
+  color: $color-body-text;
 }
 
 body,
