--- a/src/styles/sections/collections.scss
+++ b/src/styles/sections/collections.scss
@@ -1,5 +1,3 @@
-.collections {}
-
 .collections__container {
   display: flex;
   flex-wrap: wrap;
@@ -8,6 +6,12 @@
 .collections__collection-link {
   flex-basis: 100%;
   width: 100%;
+
+  &:hover {
+    > .collections__collection {
+      opacity: 0.75;
+    }
+  }
 
   @include mq('large') {
     flex-basis: 50%;
@@ -27,11 +31,11 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  transition: opacity $transtion, background $transtion;
 }
-
 
 .collections__collection-title {
   color: #fff;
-  background-color:rgba(0,0,0,0.75);
+  background-color:rgba(0, 0, 0, 0.75);
   padding: 15px;
 }
