--- a/src/styles/sections/products.scss
+++ b/src/styles/sections/products.scss
@@ -1,5 +1,3 @@
-.products {}
-
 .products__title {
   text-align: center;
 }
@@ -39,14 +37,14 @@
   padding-bottom: 100%;
   background: center no-repeat;
   background-size: contain;
-  transition: opacity 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: opacity $transtion;
 }
 
 .products__product-title {
-  transition: color 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: color $transtion;
 }
 
 .products__product-price {
   color: $color-grey;
-  transition: color 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transition: color $transtion;
 }
