feat: add instagram homepage section

--- a/src/styles/templates/index/index.scss
+++ b/src/styles/templates/index/index.scss
@@ -9,3 +9,4 @@
 @import '../../sections/slider';
 @import '../../sections/collections';
 @import '../../sections/products';
+@import '../../sections/instagram';
