feat: add presets to collection, product and instagram sections

--- a/src/sections/collections.liquid
+++ b/src/sections/collections.liquid
@@ -50,6 +50,12 @@
         }
       ]
     }
+  ],
+  "presets": [
+    {
+      "category": "Lists",
+      "name": "Collection list"
+    }
   ]
 }
 {% endschema %}
