--- a/src/sections/products.liquid
+++ b/src/sections/products.liquid
@@ -41,6 +41,12 @@
       "type": "collection",
       "label": "Collection"
     }
+  ],
+  "presets": [
+    {
+      "category": "Lists",
+      "name": "Product list"
+    }
   ]
 }
 {% endschema %}
