feat: change project structure
- remove `sections/styles`
- move `snippets/components` => `snippets`
- move `snippets/core` => `snippets`
- move `sections/core` => `sections`
- add basic footer markup
- add instagram slider section

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -52,6 +52,7 @@
   </head>
 
   <body
+    class="container"
     data-template="{{ template.name | handle }}"
     {%- if template.suffix != blank -%}
       data-alternate-template="{{ template.suffix | handle }}"
@@ -64,7 +65,7 @@
       Skip to content
     </a>
 
-    {% section 'header' %}
+    {% include 'header' %}
 
     <main
       role="main"
@@ -74,9 +75,7 @@
       {{ content_for_layout }}
     </main>
 
-    {%- comment -%}
-      {% section 'footer' %}
-    {%- endcomment -%}
+    {% include 'footer' %}
 
     {% include 'external-scripts' %}
   </body>
