--- a/src/sections/slider.liquid
+++ b/src/sections/slider.liquid
@@ -38,6 +38,12 @@
           }
         ]
       }
+    ],
+    "presets": [
+      {
+        "category": "Sliders",
+        "name": "Basic"
+      }
     ]
   }
 {% endschema %}
