--- a/src/styles/components/header-hamburger.scss
+++ b/src/styles/components/header-hamburger.scss
@@ -3,7 +3,7 @@
   width: 60px;
   padding: 15px;
   cursor: pointer;
-  transition: fill $transtion;
+  transition: fill $transition;
 
   &:hover {
     fill: $color-grey-darker;
