--- a/src/styles/components/header-logo.scss
+++ b/src/styles/components/header-logo.scss
@@ -4,7 +4,7 @@
   color: $color-grey-darker;
   display: flex;
   line-height: 59px;
-  transition: color $transtion;
+  transition: color $transition;
 
   &:hover {
     color: $color-grey-dark;
