--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -10,9 +10,12 @@
 @import 'base/index';
 
 // Components
+@import 'components/container';
 
 // Sections
-@import 'sections/header';
+@import 'components/header';
+@import 'components/instagram';
+@import 'components/footer';
 
 // Shame
 // @import 'base/shame';
