--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -32,7 +32,9 @@ $color-body-text: #222;
 
 $transition-duration: 250ms;
 $transition-func: cubic-bezier(0.25, 0.46, 0.45, 0.94);
-$transtion: $transition-duration $transition-func;
+$transition: $transition-duration $transition-func;
+
+$container: 1440px;
 
 // $named-widths: (
 //   1: full,
