--- a/src/styles/components/products.scss
+++ b/src/styles/components/products.scss
@@ -26,11 +26,13 @@
 .products__container {
   display: flex;
   flex-wrap: wrap;
+  margin: 0 -1*$space-2xs;
 }
 
 .products__product-link {
   flex-basis: 50%;
   width: 50%;
+  padding: 0 10px;
 
   &:hover {
     > .products__product {
