fix: homepage layout

--- a/src/sections/collections.liquid
+++ b/src/sections/collections.liquid
@@ -1,4 +1,4 @@
-<sections class="collections">
+<sections class="collections container">
   <h2 class="collections__title">
     {{ section.settings.heading }}
   </h2>
