--- a/src/snippets/footer.liquid
+++ b/src/snippets/footer.liquid
@@ -1,6 +1,8 @@
-<footer class="footer container">
+<footer class="footer">
   {% section 'instagram' %}
 
-  {% include 'footer-navbar' %}
-  {% include 'footer-nav' %}
+  <div class="container">
+    {% include 'footer-navbar' %}
+    {% include 'footer-nav' %}
+  </div>
 </footer>
