--- a/src/sections/products.liquid
+++ b/src/sections/products.liquid
@@ -1,4 +1,4 @@
-<section class="products">
+<section class="products container">
   <h2 class="products__title">
     {{ section.settings.heading }}
   </h2>
