refactor: footer component

--- a/src/snippets/footer-nav-list.liquid
+++ b/src/snippets/footer-nav-list.liquid
@@ -2,7 +2,10 @@
   {% for link in linklists[nav].links %}
 
   <li class="footer-nav-list__item">
-    <a href="{{ link.url }}" class="footer-nav-list__link">
+    <a
+      href="{{ link.url }}"
+      class="footer-nav-list__link"
+    >
       {{ link.title }}
     </a>
   </li>
