--- a/src/snippets/footer.liquid
+++ b/src/snippets/footer.liquid
@@ -1,8 +1,7 @@
 <footer class="footer">
   {% section 'instagram' %}
-
-  <div class="container">
-    {% include 'footer-navbar' %}
-    {% include 'footer-nav' %}
-  </div>
+  {% include 'footer-navbar' %}
+  {% include 'footer-logo' %}
+  {% assign nav = 'footer-nav-menu' %}
+  {% include 'footer-nav-list' %}
 </footer>
