refactor: collection template component

--- a/src/styles/templates/collection/index.scss
+++ b/src/styles/templates/collection/index.scss
@@ -1,2 +1,5 @@
 // Helpers
 @import '../../helpers/index';
+
+@import '../../components/collection-filters';
+@import '../../components/collection-filter';
