--- a/src/templates/collection.liquid
+++ b/src/templates/collection.liquid
@@ -1,1 +1,3 @@
-{% comment %}collection{% endcomment %}
+{% include 'collection-filters' %}
+{% include 'collection-cards' %}
+{% include 'collection-sort' %}
