--- a/src/snippets/collection-filters.liquid
+++ b/src/snippets/collection-filters.liquid
@@ -3,8 +3,7 @@
     Collection Filters
   </h3>
 
-  {% assign filter = 'Color' %}
-  {% include 'collection-filter' %}
+  {% include 'collection-filter-color' %}
 
   {% assign filter = 'Size' %}
   {% include 'collection-filter' %}
