--- a/src/sections/collections.liquid
+++ b/src/sections/collections.liquid
@@ -11,7 +11,7 @@
       >
         <div
           class="collections__collection"
-          style="background-image: url('{{ collections[block.settings.collection].image | img_url: 'master'}}');"
+          style="background-image: url('{{ collections[block.settings.collection].image | img_url: '720x'}}');"
         >
           <h2 class="collections__collection-title">
             {{ block.settings.title }}
