--- a/src/snippets/footer-form.liquid
+++ b/src/snippets/footer-form.liquid
@@ -7,7 +7,8 @@
     <input
       type="email"
       placeholder="Enter your email address"
+      arialabel="Newsletter subscription email address"
       class="footer-form__input"
-    /> 
+    />
   </form>
 </section>
