feat: add titles for footer links

--- a/src/snippets/footer-nav-list.liquid
+++ b/src/snippets/footer-nav-list.liquid
@@ -4,6 +4,7 @@
   <li class="footer-nav-list__item">
     <a
       href="{{ link.url }}"
+      title="{{ link.title }}"
       class="footer-nav-list__link"
     >
       {{ link.title }}
