refactor: footer snippet

--- a/src/snippets/footer.liquid
+++ b/src/snippets/footer.liquid
@@ -2,6 +2,5 @@
   {% section 'instagram' %}
   {% include 'footer-navbar' %}
   {% include 'footer-logo' %}
-  {% assign nav = 'footer-nav-menu' %}
-  {% include 'footer-nav-list' %}
+  {% include 'footer-nav-list', nav: 'footer-nav-menu' %}
 </footer>
