feat: add theme settings toggle for promobar

--- a/src/snippets/promobar.liquid
+++ b/src/snippets/promobar.liquid
@@ -1,8 +1,10 @@
-<div class="promobar">
-  <div class="promobar__text">
-    {{ settings.promobar_text }}
+{% if settings.enable_promobar != blank %}
+  <div class="promobar">
+    <div class="promobar__text">
+      {{ settings.promobar_text }}
+    </div>
   </div>
-</div>
+{% endif %}
 
 <style>
   .promobar {
