--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -36,6 +36,8 @@ $transition: $transition-duration $transition-func;
 
 $container: 1440px;
 
+$font-primary: 'Roboto', sans-serif;
+
 // $named-widths: (
 //   1: full,
 //   0.5: half,
