fix: edit collections section schema

--- a/src/sections/collections.liquid
+++ b/src/sections/collections.liquid
@@ -40,7 +40,7 @@
       "settings": [
         {
           "id": "title",
-          "type": "collection-title",
+          "type": "text",
           "label": "Collection title"
         },
         {
